[package]
name = "sudoku"
version = "0.1.0"
authors = ["Philipp Wellner <philipp.wellner@mintendo-programmer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "*"
pistoncore-glutin_window = "*"
piston2d-graphics = "*"
piston2d-opengl_graphics = "*"
serde = { version = "*", features = ["derive"]}
serde_json = "*"